; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_bio.c_buf_reset.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_bio.c_buf_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@B_READ = common dso_local global i32 0, align 4
@B_WRITE = common dso_local global i32 0, align 4
@B_ERROR = common dso_local global i32 0, align 4
@B_DONE = common dso_local global i32 0, align 4
@B_INVAL = common dso_local global i32 0, align 4
@B_ASYNC = common dso_local global i32 0, align 4
@B_NOCACHE = common dso_local global i32 0, align 4
@B_FUA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @buf_reset(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @B_READ, align 4
  %9 = load i32, i32* @B_WRITE, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @B_ERROR, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @B_DONE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @B_INVAL, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @B_ASYNC, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @B_NOCACHE, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* @B_FUA, align 4
  %22 = or i32 %20, %21
  %23 = call i32 @CLR(i32 %7, i32 %22)
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* @B_ASYNC, align 4
  %29 = load i32, i32* @B_READ, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @B_WRITE, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* @B_NOCACHE, align 4
  %34 = or i32 %32, %33
  %35 = and i32 %27, %34
  %36 = call i32 @SET(i32 %26, i32 %35)
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  store i64 0, i64* %38, align 8
  ret void
}

declare dso_local i32 @CLR(i32, i32) #1

declare dso_local i32 @SET(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
